<resources>
    <string name="app_name">ArcFaceDemo</string>
    <string name="page_preview">face attributes detect(video)</string>
    <string name="face_recognize_mode">face compare 1:n(video vs database)</string>
    <string name="page_single_image">face attributes detect(image)</string>
    <string name="page_multi_image">face compare 1:n(image vs image)</string>
    <string name="start_process">process</string>
    <string name="choose_local_image">choose local image</string>
    <string name="choose_remote_image">choose remote image</string>
    <string name="choose_main_image">choose main image</string>
    <string name="add_item_image">add item image</string>
    <string name="processing">processing</string>
    <string name="get_picture_failed">failed to get picture!</string>
    <string name="permission_denied">permission denied!</string>
    <string name="active_engine">active engine</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="init_failed">init failed,code is %d</string>
    <string name="engine_not_initialized">engine not initialized! code is %d</string>
    <string name="notice_choose_main_img">please choose main image first</string>
    <string name="compare_failed">compare failed!code is %d</string>
    <string name="register">register</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="face_manage">face manage</string>
    <string name="batch_register">batch register</string>
    <string name="notification_register">please put the images that need to register into directory \nsdcard/arcfacedemo/register</string>
    <string name="registering_please_wait">registering,please wait</string>
    <string name="deleteing_please_wait">deleteing,please wait</string>
    <string name="processing_please_wait">processing,please wait</string>
    <string name="clear_faces">clear faces</string>
    <string name="no_face_need_to_delete">no face need to delete</string>
    <string name="notification">notification</string>
    <string name="confirm_delete">delete those %d images and face features?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ft_op_title">detect degree in video mode:</string>
    <string name="ft_op_0">0&#176;</string>
    <string name="ft_op_90">90&#176;</string>
    <string name="ft_op_180">180&#176;</string>
    <string name="ft_op_270">270&#176;</string>
    <string name="ft_op_360">360&#176;</string>
    <string name="title_home">title_home</string>
    <string name="title_notifications">title_notifications</string>
    <string name="title_dashboard">title_dashboard</string>
    <string name="testButton">testButton</string>
    <string name="check_in">check in</string>
    <string name="student_manage">student manage</string>
    <string name="student_manage_url">http://10.253.9.56/student.json</string>
    <string name="setting">setting</string>
</resources>
